test/libyul/yulSyntaxTests/zkevm/invalid/to_l1.yul
{
	$zk_to_l1(0xa, 0xb)
}
// ====
// dialect: evm
// ----
// TypeError 7000: (3-12): Function "$zk_to_l1" expects 3 arguments but got 2.
